<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.lastminutedevice.demo.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/home_title"/>
    <Button
        android:id="@+id/button_deep_link"
        android:text="@string/button_deep_link"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_web"
        android:text="@string/button_web"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_launch"
        android:text="@string/button_launch"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_bundle"
        android:text="@string/button_bundle"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_remote_input"
        android:text="@string/button_remote_input"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"/>
</LinearLayout>
